# axiom_logger

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/: axiom_logger.py
src/axiom_logger_stemadde/: axiom_logger.py
tests/: main.py
