[build-system]
requires = ["setuptools>=61.0", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom_logger"
version = "1.0.3"
authors = [
  { name="Stefano Maddè", email="sm@spforniture.it" },
]
description = "Python logging handler for the Axiom service"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stemadde/axiom_logger"
"Bug Tracker" = "https://github.com/stemadde/axiom_logger/issues"
